--- a/_data/data.yml
+++ b/_data/data.yml
@@ -59,7 +59,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      I am a second-year Ph.D. student at the Department of Electrical and Computer Engineering 
+      I am a second-year Ph.D. student at the Department of Computer Sciences 
       at the University of Wisconsin-Madison, advised by Prof. Tsung-Wei(TW) Huang. 
       My research has focused on Power and Timing Optimization using Multi-Bit Flipflops,
       Parallel Computing, Design Automation and High Performance Computing. My CV in PDF form
