Redundant place fix

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -175,7 +175,7 @@ experiences:
 projects:
     title: Achievements
     assignments:
-      - title: Placed 6th place out of 90 teams (with Honorable Mention) in ICCAD 2024 Contest
+      - title: Placed 6th out of 90 teams (with Honorable Mention) in ICCAD 2024 Contest
         #link: "#hook"
         #tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
