--- a/_data/data.yml
+++ b/_data/data.yml
@@ -217,7 +217,7 @@ publications:
         conference: Submitted to 2026 Design Automation Conference (DAC)
 
       - title: "TIMBER: A Fast Algorithm for Timing and Power Optimization using Multi-bit Flip-flops"
-        link: ""
+        link: "https://tsung-wei-huang.github.io/papers/2025-ASPDAC-TIMBER.pdf"
         authors: Aditya Das Sarma, Shui Jiang, Wan Luan Lee, Tsung-Yi Ho, Tsung-Wei Huang
         conference: 2026 IEEE/ACM Asia and South Pacific Design Automation Conference (ASP-DAC)
         
