--- a/_data/data.yml
+++ b/_data/data.yml
@@ -63,7 +63,7 @@ career-profile:
       at the University of Wisconsin-Madison, advised by Prof. Tsung-Wei (TW) Huang. 
       My research focuses on Differentiable Optimization, High Performance Computing and Electronic Design Automation Algorithms. 
       Currently, my research focuses on automatically finding optimal partitioning strategies for computational graphs. My skillset
-      includes C/C++, JAX/XLA and MLIR.
+      includes C/C++ and JAX/XLA.
 education:
     title: Education
     info:
