--- a/_data/data.yml
+++ b/_data/data.yml
@@ -213,7 +213,7 @@ publications:
     papers:
       - title: "A New Differentiable Approach to Task Graph Partitioning: A Case Study in RTL Simulation"
         link: ""
-        authors: Aditya Das Sarma, Tsung-Wei Huang
+        authors: Aditya Das Sarma, Wan-Luan Lee, Shui Jiang, Boyang Zhang, Tsung-Wei Huang
         conference: Submitted to 2026 Design Automation Conference (DAC)
 
       - title: "TIMBER: A Fast Algorithm for Timing and Power Optimization using Multi-bit Flip-flops"
