--- a/_data/data.yml
+++ b/_data/data.yml
@@ -61,8 +61,7 @@ career-profile:
     summary: |
       I am a second-year Ph.D. student at the Department of Computer Sciences 
       at the University of Wisconsin-Madison, advised by Prof. Tsung-Wei (TW) Huang. 
-      My research focuses on Differentiable Optimization, High Performance Computing and Electronic Design Automation Algorithms. 
-      Currently, my research focuses on automatically finding optimal partitioning strategies for computational graphs. My skillset
+      My research focuses on machine learning for systems and AI for chip design. My skillset
       includes C/C++ and JAX/XLA.
 education:
     title: Education
